[project]
name = "hardstuck.club"
version = "1.0.0"
requires-python=">=3.14,<3.15"
dependencies = [
    "beautifulsoup4<5",
    "boto3>=1.34.69",
    "celery[redis]>=5.3.6",
    "dj-database-url>=2.2.0",
    "django~=5.2",
    "django-cors-headers>=4.5.0",
    "django-cotton>=1.0.3",
    "django-debug-toolbar>=4.4.6",
    "django-extensions>=3.2.3",
    "django-filter>=24.3",
    "django-htmx>=1.19.0",
    "django-redis>=5.4.0",
    "django-storages>=1.14.4",
    "django-stubs-ext>=5.2.2",
    "django-stubs[compatible-mypy]>=5.2.2",
    "djangorestframework>=3.16.1",
    "djangorestframework-stubs[compatible-mypy]>=3.16.2",
    "factory-boy>=3.3.1",
    "gunicorn>=23.0.0",
    "hypothesis>=6.115.0",
    "ipython>=9.9.0",
    "lolwrapper",
    "mypy>=1.13.0",
    "pillow>=12.0.0",
    "psycopg[binary]>=3.3.2",
    "pydantic<3",
    "pytailwindcss>=0.2.0",
    "python-decouple>=3.8",
    "pytz>=2024.2",
    "redis<5",
    "requests>=2.32.3",
    "sentry-sdk>=2.16.0",
    "werkzeug>=3.1.3",
    "whitenoise>=6.8.2",
]

[tool.uv.sources]
lolwrapper = { git = "https://github.com/brianjp93/lolapi.git", rev = "c84841786484f7e0b844fa203c06f8bdea54647f" }

[tool.black]
exclude = '/*migrations*/'
line-length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
DJANGO_SETTINGS_MODULE = "lolsite.settings_test"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "lolsite.settings_local"

[tool.ruff]
ignore = ["E501"]
target-version = "py314"

[tool.djlint]
indent = 2
format_js = true
format_css = true
line_break_after_multiline_tag = true
max_blank_lines = 1
profile = "django"
custom_html = "c-[\\w._\\-]+"

[tool.djlint.js]
indent_size = 2

[tool.djlint.css]
indent_size = 2

[tool.pyright]
exclude = ["**/migrations/**", ".venv/**", "**/tests/**"]
typeCheckingMode = "standard"
